# prpc-template

./: Cargo.toml  app.toml  build.rs
decl/src/: generated.rs
def/: cargo-generate.toml
def/proto/: rpc.proto
hooks/: post-gen.rhai
impl/: Cargo.toml  cargo-generate.toml
impl/hooks/: post-gen.rhai
impl/src/: config.rs  main.rs  main_service.rs  web_routes.rs
rpc/: Cargo.toml  build.rs
rpc/proto/: rpc.proto
rpc/src/: generated.rs
src/: config.rs  main.rs  main_service.rs  web_routes.rs
