[package]
name = "{{app_name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
ra-rpc = { version = "0.1.0", path = "../ra-rpc" }
{{app_name}}-rpc = { version = "0.1.0", path = "../{{app_name}}-rpc" }
rocket = { git = "https://github.com/rwf2/Rocket", branch = "master", features = ["mtls"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.89"
